# meadow

./: .clang-format  .gitignore  1_build_conan.sh  2_build_nonconan.sh  CMakeLists.txt  LICENSE  README.md  conanfile.txt  file.txt
.github/workflows/: build.yml  ci.yml
cmake/: build_external_with_cmake_template.cmake  utils.cmake  warnings_clang.cmake  warnings_gcc.cmake  warnings_msvc.cmake
src/: CMakeLists.txt  cppext.cpp  errno.cpp  math.cpp
src/meadow/: CMakeLists.txt  SDLApp.cpp  array.h  cppext.cpp  cppext.h  errno.cpp  errno.h  evariant.cpp  file.cpp  filesystem.cpp  math.cpp  math.h  matlab.cpp  matlab.h  matlab_signal.cpp  music.h  pch.h  physics.h  sdl.cpp  sdl_app.cpp  span.h  unique_token.h
src/meadow/include/meadow/: SDLApp.h  array.h  cppext.h  dynamic_bitset.h  eigen_dense.h  enum.h  evariant.h  file.h  filesystem.h  inplace_vector.h  lewissbaker_generator.h  math.h  matlab.h  matlab_signal.h  music.h  physics.h  ranges.h  ring.h  sdl.cpp  sdl.h  sdl_app.h  sdl_main.h  span.h  unique_token.h  vector.h
src/sdl_app/: CMakeLists.txt
src/sdl_app/include/meadow/: sdl_app.h
testing/: CMakeLists.txt  matlab_butter_test_data.h  pch.h  test_cppext.cpp  test_enum.cpp  test_errno.cpp  test_evariant.cpp  test_math.cpp  test_matlab.cpp  test_matlab_signal.cpp  test_music.cpp  test_physics.cpp  test_ranges.cpp
